v1.4.2: Audit Bug fixes, Mod native colors, LocalScript CWD fixes